Fixed image width on tablets

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ img {
     filter: drop-shadow(0px 0px 5px grey);
     border-radius: 10px;
     width: 100%;
-    max-width: 1000px;
+    max-width: 700px;
 }
 
 header {
